--- a/3/DirectAgents.Web/CakeExtracter.Tests/CakeExtracter.Tests.csproj
+++ b/3/DirectAgents.Web/CakeExtracter.Tests/CakeExtracter.Tests.csproj
@@ -61,6 +61,9 @@
     <Reference Include="Moq, Version=4.10.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.10.1\lib\net45\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -74,12 +77,21 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.1\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="Z.EntityFramework.Extensions, Version=3.16.23.0, Culture=neutral, PublicKeyToken=59b66d028979105b, processorArchitecture=MSIL">
       <HintPath>..\packages\Z.EntityFramework.Extensions.3.16.23\lib\net45\Z.EntityFramework.Extensions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JobTests\Amazon\RelaunchMechanism\AmazonRelaunchMechanismTests.cs" />
+    <Compile Include="JobTests\Amazon\TestImplementations\DIModules\Base\TestAmazonDependencyInjectionModule.cs" />
+    <Compile Include="JobTests\Amazon\TestImplementations\DIModules\TestAmazonDailyCleanerFailedDiModule.cs" />
+    <Compile Include="JobTests\Amazon\TestImplementations\DIModules\TestAmazonDailyExtractorFailedDiModule.cs" />
+    <Compile Include="JobTests\Amazon\TestImplementations\DIModules\TestAmazonDailyLoaderFailedDiModule.cs" />
+    <Compile Include="JobTests\Amazon\TestImplementations\DIModules\TestAmazonKeywordCleanerFailedDiModule.cs" />
+    <Compile Include="JobTests\Amazon\TestImplementations\DIModules\TestAmazonKeywordLoaderFailedDiModule.cs" />
     <Compile Include="JobTests\Amazon\TestImplementations\TestJobExecutionItemRepository.cs" />
     <Compile Include="JobTests\Amazon\TestImplementations\TestJobRequestRepository.cs" />
     <Compile Include="JobTests\Kochava\KochavaLoaderTests.cs" />
