--- a/3/DirectAgents.Web/CakeExtracter.Tests/packages.config
+++ b/3/DirectAgents.Web/CakeExtracter.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net461" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net461" />
   <package id="Moq" version="4.10.1" targetFramework="net461" />
+  <package id="Ninject" version="3.3.4" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit.Console" version="3.9.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.9.0" targetFramework="net461" />
@@ -17,5 +18,6 @@
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Z.EntityFramework.Extensions" version="3.16.23" targetFramework="net461" />
 </packages>
