Stable version of the PDA command. Now classes of separated selenium project don't know about Logger and Configuration. Modified a logic of work with pageActions and authorizationModel. Added PdaProfileUrlManager. Some page objects were moved to separated class because they are common. Removed redudant code.

--- a/3/DirectAgents.Web/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/DirectAgents.Web/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PageActions\BaseAmazonPageObjects.cs" />
     <Compile Include="PDA\AmazonConsoleManagerUtility.cs" />
     <Compile Include="Drivers\ChromeWebDriver.cs" />
     <Compile Include="Helpers\CookieManager.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="PDA\Exceptions\AccountDoesNotHaveProfileException.cs" />
     <Compile Include="PDA\Helpers\AmazonCmApiHelper.cs" />
     <Compile Include="PDA\Helpers\PdaLoginHelper.cs" />
+    <Compile Include="PDA\Helpers\PdaProfileUrlManager.cs" />
     <Compile Include="PDA\Models\AuthorizationModel.cs" />
     <Compile Include="PDA\Models\ConsoleManagerUtilityModels\AmazonCmApiCampaignSummary.cs" />
     <Compile Include="PDA\Models\ConsoleManagerUtilityModels\AmazonCmApiParams.cs" />
