Refactoring of job request execution scheduler.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -250,8 +250,10 @@
 
     <!--Failed Jobs Notifications Configuration -->
     <add key="AzureSendGridApiKey" value="" />
-    <add key="JEM_Failure_ToEmails" value="" />  
-    <add key="JEM_Failure_CcEmails" value="" />
+    <add key="JEM_JobFailed_ToEmails" value="" />  
+    <add key="JEM_JobFailed_CcEmails" value="" />
+    <add key="JEM_ErrorOccurred_ToEmails" value="" />
+    <add key="JEM_ErrorOccurred_CcEmails" value="" />
     <add key="JEM_Failure_FromEmail" value="" />
 
     <!--Automated shut down mechanism configuration -->
