Started adding relaunch mechanism logic for PDA command.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -255,6 +255,7 @@
     <add key="PDA_WaitPageTimeoutInMinutes" value="30" />
     <add key="PDA_MaxRetryAttempts" value="10" />
     <add key="PDA_PauseBetweenAttemptsInSeconds" value="1" />
+    <add key="PDAIntervalBetweenRequestsInMinutes" value="60"/>
 
   </appSettings>
   <system.serviceModel>
