VCD ETL moved from the selenium application to the console command. The draft version of the VCD command is building and working.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -249,6 +249,7 @@
     <add key="JEM_MaxNumberOfRunningRequests" value="20" />
 
     <!--Selenium Configuration-->
+    <add key="SeleniumWaitPageTimeoutInMinutes" value="30"/>
     <add key="PDA_EMail" value="reportingdev@directagents.com" />
     <add key="PDA_EMailPassword" value="rep0rts" />
     <add key="PDA_CookiesDirectoryName" value="Cookies" />
