--- a/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -80,13 +80,26 @@
     <Compile Include="PDA\Helpers\AmazonCmApiHelper.cs" />
     <Compile Include="PDA\Helpers\PdaLoginHelper.cs" />
     <Compile Include="PDA\Helpers\PdaProfileUrlManager.cs" />
-    <Compile Include="PDA\Models\AuthorizationModel.cs" />
+    <Compile Include="Models\AuthorizationModel.cs" />
     <Compile Include="PDA\Models\AmazonCmApiCampaignSummary.cs" />
     <Compile Include="PDA\Models\AmazonCmApiParams.cs" />
     <Compile Include="PDA\Models\Filter.cs" />
     <Compile Include="PDA\PageActions\AmazonPdaPageActions.cs" />
     <Compile Include="PDA\PageActions\AmazonPdaPageObjects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VCD\Helpers\AmazonVcdLoginHelper.cs" />
+    <Compile Include="VCD\Helpers\ReportDownloading\Constants\RequestBodyConstants.cs" />
+    <Compile Include="VCD\Helpers\ReportDownloading\Constants\RequestHeaderConstants.cs" />
+    <Compile Include="VCD\Helpers\ReportDownloading\Constants\RequestQueryConstants.cs" />
+    <Compile Include="VCD\Helpers\ReportDownloading\Models\DownloadReportRequestBody.cs" />
+    <Compile Include="VCD\Helpers\ReportDownloading\Models\ReportDownloadingRequestPageData.cs" />
+    <Compile Include="VCD\Helpers\ReportDownloading\VcdReportDownloader.cs" />
+    <Compile Include="VCD\Helpers\UserInfoExtracting\Models\PageUserInfo.cs" />
+    <Compile Include="VCD\Helpers\UserInfoExtracting\Models\PageAccountInfo.cs" />
+    <Compile Include="VCD\Helpers\UserInfoExtracting\UserInfoExtracter.cs" />
+    <Compile Include="VCD\Models\VcdAccountInfo.cs" />
+    <Compile Include="VCD\PageActions\AmazonVcdPageActions.cs" />
+    <Compile Include="VCD\PageActions\AmazonVcdPageObjects.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -95,6 +108,7 @@
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\DirectAgents.Web\packages\Selenium.Chrome.WebDriver.2.43\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.2.43\build\Selenium.Chrome.WebDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
