--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -143,6 +143,8 @@
     <add key="FB_7d_view" value="" />
     <add key="FB_28d_click" value="" /> <!--This Conversion Attribution Window is by default now-->
     <add key="FB_28d_view" value="" />
+    <add key="FB_AsyncJobWaitingRetriesNumber" value="25" />
+    <add key="FB_AsyncJobFailureRetriesNumber" value="5" />
 
     <add key="YahooAuthBaseUrl" value="https://api.login.yahoo.com/oauth2/get_token" />
     <add key="YahooClientID" value="" />
