--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -125,8 +125,8 @@
     <add key="GoogleAPI_Certificate" value="271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
     <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
 
-    <!-- Funimation, Bevel, Course Hero, Britbox, American Beauty Star -->
-    <add key="DBM_StrategiesFromLineItems" value="124700741,503077595,516881254,518396307,520462220" />
+    <!-- Funimation, Bevel, Course Hero, Britbox, American Beauty Star, Course Hero Seeding -->
+    <add key="DBM_StrategiesFromLineItems" value="124700741,503077595,516881254,518396307,520462220,613896988" />
     <!-- report ids(saved as external id of the accounts) -->
     <add key="DBM_CreativeReportIds" value="604983784"/>
     <add key="DBM_LineItemReportIds" value="604983549"/>
