--- a/3/API/Adform/Adform.csproj
+++ b/3/API/Adform/Adform.csproj
@@ -52,16 +52,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ReportEntities\ReportParameters\Media.cs" />
+    <Compile Include="Entities\ReportEntities\ReportParameters\ReportFilter.cs" />
     <Compile Include="Entities\ResponseStatus.cs" />
     <Compile Include="Utilities\AdformLogger.cs" />
     <Compile Include="Utilities\AdformUtility.cs" />
-    <Compile Include="Entities\ReportEntities\MetricMetadata.cs" />
+    <Compile Include="Entities\ReportEntities\ReportParameters\MetricMetadata.cs" />
     <Compile Include="Entities\ReportSettings.cs" />
-    <Compile Include="Entities\ReportEntities\Dates.cs" />
+    <Compile Include="Entities\ReportEntities\ReportParameters\Dates.cs" />
     <Compile Include="Entities\ResponseEntities\GetTokenResponse.cs" />
-    <Compile Include="Entities\ReportEntities\Paging.cs" />
     <Compile Include="Entities\ReportEntities\ReportData.cs" />
-    <Compile Include="Entities\ReportEntities\ReportParams.cs" />
+    <Compile Include="Entities\ReportEntities\ReportParameters\ReportParams.cs" />
     <Compile Include="Entities\ReportEntities\ReportResponse.cs" />
     <Compile Include="Entities\ResponseEntities\PollingOperationResponse.cs" />
     <Compile Include="Enums\AdInteractionType.cs" />
