Small refactoring the VCD command and VCD configuration helper, added base configuration helper for selenium command.

--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -462,7 +462,7 @@
     <Compile Include="Common\SqlScriptsExecutor.cs" />
     <Compile Include="Common\StorageCollection.cs" />
     <Compile Include="Common\TextUtils.cs" />
-    <Compile Include="Etl\AmazonSelenium\PDA\Configuration\PdaConfigurationHelper.cs" />
+    <Compile Include="Etl\AmazonSelenium\PDA\Configuration\PdaCommandConfigurationHelper.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\Enums\AmazonCmApiMetrics.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\Enums\AmazonReportMetrics.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\Extractors\AmazonPdaCampaignRequestExtractor.cs" />
@@ -488,7 +488,7 @@
     <Compile Include="Etl\AmazonSelenium\VCD\Configuration\Models\VcdExecutionProfileConfiguration.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Models\VcdReportData.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Configuration\VcdAccountsDataProvider.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCD\Configuration\VcdCommandConfigurationManager.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCD\Configuration\VcdCommandConfigurationHelper.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Configuration\VcdExecutionProfileManger.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Synchers\VcdAnalyticTablesSyncher.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\VcdExtractionHelpers\ReportDataComposer\VcdReportComposer.cs" />
