Created logger for Selenium command. It used in VCD and PDA page actions and PDA utility.

--- a/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -66,6 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\SeleniumLogger.cs" />
     <Compile Include="PageActions\BaseAmazonPageObjects.cs" />
     <Compile Include="PDA\AmazonConsoleManagerUtility.cs" />
     <Compile Include="Drivers\ChromeWebDriver.cs" />
