--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -249,6 +249,7 @@
     <Compile Include="Areas\Cake\Controllers\ConversionsController.cs" />
     <Compile Include="Areas\Cake\Controllers\HomeController.cs" />
     <Compile Include="Areas\Cake\Controllers\OffersController.cs" />
+    <Compile Include="Areas\Cake\Models\AdvertiserStatsVM.cs" />
     <Compile Include="Areas\ClientAdmin\ClientAdminAreaRegistration.cs" />
     <Compile Include="Areas\ClientAdmin\Controllers\ClientReportsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\ActionsController.cs" />
@@ -929,7 +930,6 @@
   <ItemGroup>
     <Folder Include="Areas\AB\Views\ClientBudgets\" />
     <Folder Include="Areas\AB\Views\SpendBuckets\" />
-    <Folder Include="Areas\Cake\Models\" />
     <Folder Include="Areas\ClientAdmin\Models\" />
     <Folder Include="Areas\RevTrack\Models\" />
     <Folder Include="Areas\RevTrack\Views\Shared\" />
@@ -1205,6 +1205,7 @@
     <Content Include="Areas\ProgAdmin\Views\Facebook\Latests.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Shared\DatePicker.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Facebook\ActionTotals.cshtml" />
+    <Content Include="Areas\Cake\Views\Advertisers\ShowStats.cshtml" />
     <None Include="Properties\PublishProfiles\dagents_vm_staging.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
