--- a/3/DirectAgents.Web/CakeExtracter.Tests/CakeExtracter.Tests.csproj
+++ b/3/DirectAgents.Web/CakeExtracter.Tests/CakeExtracter.Tests.csproj
@@ -85,6 +85,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CommandExecutionContextTests\CommandExecutionContextTests.cs" />
+    <Compile Include="Core\CommandExecutionContextTests\MockDIModules\TestExecutionContextDIModule.cs" />
+    <Compile Include="Core\CommandExecutionContextTests\TestCommand\CommonTestCommand.cs" />
+    <Compile Include="Core\CommandExecutionContextTests\TestCommand\WithRetriesCreatedDifferWithParentTestCommand .cs" />
+    <Compile Include="Core\CommandExecutionContextTests\TestCommand\WithRetriesCreatedEqualToParentTestCommand.cs" />
+    <Compile Include="Core\CommandExecutionContextTests\TestCommand\FailingTestCommand.cs" />
     <Compile Include="JobTests\Amazon\RelaunchMechanism\AmazonRelaunchMechanismTests.cs" />
     <Compile Include="JobTests\Amazon\TestImplementations\DIModules\Base\TestAmazonDependencyInjectionModule.cs" />
     <Compile Include="JobTests\Amazon\TestImplementations\DIModules\TestAmazonDailyCleanerFailedDiModule.cs" />
@@ -131,6 +137,7 @@
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
