Added relaunch mechanism for VCD command. Fix bug relative path to sync script.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -257,6 +257,9 @@
     <add key="PDA_MaxRetryAttempts" value="10" />
     <add key="PDA_PauseBetweenAttemptsInSeconds" value="1" />
     <add key="PDAIntervalBetweenRequestsInMinutes" value="60"/>
+    <!--Syncher sql scripts configuration -->
+    <add key="VCD_SyncScriptPath" value="SQL\VCD"/>
+    <add key="VCD_SyncScriptName" value="SyncVcdAnalyticTable.sql"/>
 
   </appSettings>
   <system.serviceModel>
