Fix filter list when requesting an Adform report.

--- a/3/API/Adform/Adform.csproj
+++ b/3/API/Adform/Adform.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Entities\ReportEntities\ReportParameters\Media.cs" />
     <Compile Include="Entities\ReportEntities\ReportParameters\ReportFilter.cs" />
+    <Compile Include="Entities\ReportEntities\ReportParameters\ReportFilterWithTracking.cs" />
     <Compile Include="Entities\ResponseStatus.cs" />
     <Compile Include="Utilities\AdformLogger.cs" />
     <Compile Include="Utilities\AdformUtility.cs" />
