--- a/3/API/Amazon/packages.config
+++ b/3/API/Amazon/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="AWSSDK.Core" version="3.3.31.6" targetFramework="net461" />
   <package id="AWSSDK.S3" version="3.3.31.14" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Polly" version="6.1.2" targetFramework="net461" />
   <package id="RestSharp" version="106.3.1" targetFramework="net452" />
