--- a/3/BingAds/packages.config
+++ b/3/BingAds/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.BingAds.SDK" version="12.0.4" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.0" targetFramework="net461" />
   <package id="System.ServiceModel.Http" version="4.5.3" targetFramework="net461" />
