--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
@@ -5,6 +5,11 @@
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Polly" version="6.1.2" targetFramework="net461" />
