--- a/3/DirectAgents.Web/CakeExtracter.Tests/packages.config
+++ b/3/DirectAgents.Web/CakeExtracter.Tests/packages.config
@@ -3,6 +3,11 @@
   <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net461" />
   <package id="Moq" version="4.10.1" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
