--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -565,6 +565,7 @@
     <Compile Include="Etl\SearchMarketing\Loaders\SearchDailySummaryLoaders.cs" />
     <Compile Include="Etl\SocialMarketing\Extractors\FacebookApiExtracter.cs" />
     <Compile Include="Etl\SocialMarketing\Extractors\V2\FacebookAdMetadataExtractorV2.cs" />
+    <Compile Include="Etl\SocialMarketing\FacebookInsightsDataProviderBuilder.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\BaseFacebookEntityLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookActionTypeLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookCreativesLoader.cs" />
