Updated config for new Attribution Conversion Window values ​​for some Facebook Funimation accounts.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -139,7 +139,8 @@
     <!-- Halcraft,Wacoal,LendKey,BritBoxUs,BritBoxCA,Pimsleur,CovenantHouse,Catbird, Eaglemoss-(StarTrekRegularShips,eCommerceShop,Batmobile,Delorean,Discovery,XL,DCAllStars,DCBusts,Subscription,BattlestarGal,DisneyAn,KnitStich) -->
     <add key="FB_ConversionsAsRegistrations" value="764183110401682" /><!-- FirstLook -->
     <add key="FB_ConversionsAsVideoPlays" value="445900432262095" /><!-- M2M -->
-    <add key="FB_7d_click" value="127272435" /><!-- Jackson Galaxy -->
+    <!--DB IDs of accounts for the specific values of Conversion Attribution Window-->
+    <add key="FB_7d_click" value="1563,1564,1565,1566" /><!-- Funimation SVOD (Funimation accounts for SVOD campaigns) -->
     <add key="FB_7d_view" value="" />
     <add key="FB_28d_click" value="" /> <!--This Conversion Attribution Window is by default now-->
     <add key="FB_28d_view" value="" />
