--- a/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -70,15 +70,15 @@
     <Compile Include="PageActions\AmazonLoginPageObjects.cs" />
     <Compile Include="PDA\AmazonConsoleManagerUtility.cs" />
     <Compile Include="Drivers\ChromeWebDriver.cs" />
-    <Compile Include="Helpers\CookieManager.cs" />
-    <Compile Include="Helpers\FileManager.cs" />
+    <Compile Include="Helpers\SeleniumCookieHelper.cs" />
+    <Compile Include="Helpers\PathToFileDirectoryHelper.cs" />
     <Compile Include="Helpers\RestRequestHelper.cs" />
     <Compile Include="Helpers\TimeHelper.cs" />
     <Compile Include="PageActions\AmazonLoginActionsWithPagesManager.cs" />
     <Compile Include="PageActions\ActionsWithPagesManager.cs" />
     <Compile Include="PDA\Exceptions\AccountDoesNotHaveProfileException.cs" />
     <Compile Include="PDA\Helpers\AmazonCmApiHelper.cs" />
-    <Compile Include="PDA\Helpers\PdaLoginHelper.cs" />
+    <Compile Include="PDA\Helpers\PdaLoginManager.cs" />
     <Compile Include="PDA\Helpers\PdaProfileUrlManager.cs" />
     <Compile Include="Models\AuthorizationModel.cs" />
     <Compile Include="PDA\Models\AmazonCmApiCampaignSummary.cs" />
@@ -87,7 +87,7 @@
     <Compile Include="PDA\PageActions\AmazonPdaActionsWithPagesManager.cs" />
     <Compile Include="PDA\PageActions\AmazonPdaPageObjects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VCD\Helpers\AmazonVcdLoginHelper.cs" />
+    <Compile Include="VCD\Helpers\VcdLoginManager.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Constants\RequestBodyConstants.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Constants\RequestHeaderConstants.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Constants\RequestQueryConstants.cs" />
