The Admin portal cofig file has been updated: httpAuthModule duplication has been fixed, credentials have been removed, new IP addresses have been added to restrict IP addresses.

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.Release.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.Release.config
@@ -16,8 +16,8 @@
   -->
   <appSettings>
     <add key="SSRS_ReportServerUrl" value="http://173.204.123.91/ReportServer_SQL3" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
-    <add key="SSRS_ReportServerUsername" value="reportviewertest" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
-    <add key="SSRS_ReportServerPassword" value="sp0ngbOb" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="SSRS_ReportServerUsername" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="SSRS_ReportServerPassword" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
   <system.web>
@@ -37,7 +37,7 @@
   <system.webServer>
     <modules>
       <!-- this just for Azure -->
-      <add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" xdt:Transform="Insert" />
+      <add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" xdt:Transform="InsertIfMissing" />
     </modules>
   </system.webServer>
 </configuration>
