--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -222,8 +222,6 @@
       <add name="MVCGridHandler" verb="*" path="MVCGridHandler.axd" type="MVCGrid.Web.MVCGridHandler, MVCGrid" />
     </handlers>
     <modules>
-      <!-- add this on Azure... (Release config) -->
-      <!--<add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />-->
       <add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />
     </modules>
   </system.webServer>
@@ -490,7 +488,8 @@
       - ::1 (equals to ::1/128)
 
       e.g) 127.0.0.1;182.249.0.0/16;182.248.112.128/26;::1 -->
-    <add key="RestrictIPAddresses" value="104.192.219.26;76.79.74.58;76.79.74.60;76.79.74.61;96.234.76.161;37.17.65.96/30;93.170.143.0/24;93.171.6.0/24;::1" /><!-- NY, LA1-3, Sadie, iTrans1,2,3 -->
+    <add key="RestrictIPAddresses" value="104.192.219.26;76.79.74.58;76.79.74.60;76.79.74.61;96.234.76.161;37.17.65.96/30;93.170.143.0/24;93.171.6.0/24;46.216.152.105;86.57.146.124/30;::1" />
+    <!-- NY, LA1-3, Sadie, iTrans1,2,3 -->
     <!-- [optional] If set, specified pattern url requests are skipped by http auth and IP Restriction. -->
     <!-- <add key="IgnorePathRegex" value="^/Home/Ignore$|^/Ignore\.aspx$|^/Content/"/> -->
     <!--
