--- a/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -86,6 +86,7 @@
     <Compile Include="PDA\Models\Filter.cs" />
     <Compile Include="PDA\PageActions\AmazonPdaActionsWithPagesManager.cs" />
     <Compile Include="PDA\PageActions\AmazonPdaPageObjects.cs" />
+    <Compile Include="PDA\PdaDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VCD\Helpers\VcdLoginManager.cs" />
     <Compile Include="VCD\Helpers\ReportDownloading\Constants\RequestBodyConstants.cs" />
