Initialization of the VCD command fully reorginized : created the VCD Data Provider and its Builder.

--- a/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
+++ b/3/API/SeleniumDataBrowser/SeleniumDataBrowser.csproj
@@ -101,6 +101,7 @@
     <Compile Include="VCD\Models\VcdAccountInfo.cs" />
     <Compile Include="VCD\PageActions\AmazonVcdActionsWithPagesManager.cs" />
     <Compile Include="VCD\PageActions\AmazonVcdPageObjects.cs" />
+    <Compile Include="VCD\VcdDataProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
